--- a/Alarm.html
+++ b/Alarm.html
@@ -263,7 +263,7 @@
 <div id="disply" style="font-size: 50px;text-align: center;position: absolute;top:150px;left:-100px;display: none">
     <div id="alarmQuestion" style="margin-top: 20px;text-align: center"></div>
     <input type="text" id="alarmAnswer">
-    <button id="alarmAnswerClick" onclick="pauseAlarm()">Click To Stop Sleepy Head <i class="fa fa-smile-o"></i></button>
+    <button id="alarmAnswerClick" onclick="pauseAlarm()"> Stop Sleepy Head <i class="fa fa-smile-o"></i></button>
 </div>
     </div>
 
